@@ -9424,7 +9424,7 @@
     </string>
     <string>
       <key>String_TotalComparisonWithPointBuy</key>
-      <text>Total (For Comparison with Point Buy)</text>
+      <text>Karma Required to Create in Point Buy</text>
     </string>
     <string>
       <key>String_FreeSpells</key>
